_sass/no-style-please.scss
// -------------- THEME SWITCHER -------------- //
@mixin dark-appearance {
  background: #191a22;

  p { color: #b8c3f1; }
  a { color: #b1e5fd; }
  ul, li { color: #b8c3f1; }

  & {
    background: url('/assets/images/bg.jpg') no-repeat center bottom fixed;
    background-size: cover;
  }
}

body[a="dark"] { @include dark-appearance; }

@media (prefers-color-scheme: dark) {
  body[a="auto"] { @include dark-appearance; }
}

html, body { background: white; }

html { height: 100%; }

body {
  font-family: monospace;
  font-size: 16px;
  line-height: 1.4;
  margin: 0;
  min-height: 100%;
  overflow-wrap: break-word;
}

.post-meta { text-align: right; }

h2, h3, h4, h5, h6 { margin-top: 3rem; }

hr { margin: 2rem 0; }

p { margin: 1rem 0; }

li { margin: 0.4rem 0; }

*:target { background: yellow; }

.w {
  max-width: 640px;
  margin: 0 auto;
  padding: 4rem 2rem;
}

hr {
  text-align: center;
  border: 0;

  &:before { content: '/////'; }
  &:after { content: attr(data-content) '/////'; }
}

table { width: 100%; }

table, th, td {
  border: thin solid black;
  border-collapse: collapse;
  padding: 0.4rem;
}

code {
  color: white;
  background: black;
}

div.highlighter-rouge code {
  display: block;
  overflow-x: auto;
  white-space: pre-wrap;
  padding: 1rem;
}

blockquote {
  font-style: italic;
  border: thin solid black;
  padding: 1rem;

  p { margin: 0; }
}

img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

// synthwave theme colors

@keyframes glow {
  from {
    text-shadow: 
      0 0 5px #fe6b75,
      0 0 15px #ff00de;
  }
  to {
    text-shadow: 
      0 0 10px #fe6b75,
      0 0 20px #fe6b75,
      0 0 30px #fe6b75,
      0 0 50px #ff00de,
      0 0 90px #ff00de;
  }
}

h1 {
  color: #fe6b75;
  // animation: glow 1.5s ease-in-out infinite alternate;
}
h2 { color: #dba663; }
h3 { color: #6c8e50; }
h4 { color: #6589d8; }
h5, h6, p { color: #b8c3f1; }

